--- a/add-edit-post.html
+++ b/add-edit-post.html
@@ -46,7 +46,7 @@
         <div class="container">
           <ul class="nav justify-content-between align-items-center">
             <li class="nav-item">
-              <a class="nav-link" href=".">
+              <a class="nav__link" href=".">
                 <img
                   class="nav__logo"
                   src="images/logo.svg"
@@ -56,7 +56,7 @@
             </li>
 
             <li class="nav-item">
-              <a id="goToDetailPageLink" class="nav-link" href="#"></a>
+              <a id="goToDetailPageLink" class="nav__link" href="#"></a>
             </li>
           </ul>
         </div>
